병원 진료 예약 서비스 toy project AppointmentController 관련 내용 계속 개발. 병원 / 진료과 / 의사를 선택하는 페이지 각각 구성하여 차례차례로 예약 정보를 사용자로부터 입력받을 수 있도록 개발. 그리고 원래는 메인 홈페이지에서 병원 등록만 가능했으나 진료과와 의사도 꼭 병원 등록을 통하지 않더라도 개별 등록을 할 수 있도록 Controller 클래스들 수정 및 관련 html 파일들 신규 개발.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,9 +18,13 @@
                 <a class="btn btn-lg btn-dark" href="/register/hospital">병원 등록</a>
                 <a class="btn btn-lg btn-dark" href="/hospital/list">병원 목록</a>
             </p>
+            <p>
+                <a class="btn btn-lg btn-primary" href="/hospital/option/department">진료과 등록</a>
+                <a class="btn btn-lg btn-primary" href="/hospital/option/doctor">의사 등록</a>
+            </p>
             <p class="lead">예약 기능</p>
             <p>
-                <a class="btn btn-lg btn-info" href="/appointment">진료 예약</a>
+                <a class="btn btn-lg btn-info" href="/appointment/hospital">진료 예약</a>
                 <a class="btn btn-lg btn-info" href="/appointment/list">예약 내역</a>
             </p>
         </div>
