--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,26 +4,25 @@
 </head>
 <body>
     <main>
-        <div th:replace = "fragments/bodyHeader :: bodyHeader">
-        </div>
-        <div class="position-absolute top-50 start-50 translate-middle">
-            <h1>병원 진료 예약 홈페이지</h1>
-            <p class="lead">회원 기능</p>
-            <p>
+        <div th:replace = "fragments/bodyHeader :: bodyHeader"> </div>
+        <div class="position-absolute top-50 start-50 translate-middle mt-5">
+            <h1>병원 진료 예약 페이지</h1>
+            <p class="lead" align="center">회원 기능</p>
+            <p align="center">
                 <a class="btn btn-lg btn-secondary" href="/patient/new">회원 가입</a>
                 <a class="btn btn-lg btn-secondary" href="/patient/list">회원 목록</a>
             </p>
-            <p class="lead">등록 기능</p>
-            <p>
+            <p class="lead" align="center">등록 기능</p>
+            <p align="center">
                 <a class="btn btn-lg btn-dark" href="/register/hospital">병원 등록</a>
                 <a class="btn btn-lg btn-dark" href="/hospital/list">병원 목록</a>
             </p>
-            <p>
+            <p align="center">
                 <a class="btn btn-lg btn-primary" href="/hospital/option/department">진료과 등록</a>
                 <a class="btn btn-lg btn-primary" href="/hospital/option/doctor">의사 등록</a>
             </p>
-            <p class="lead">예약 기능</p>
-            <p>
+            <p class="lead" align="center">예약 기능</p>
+            <p align="center">
                 <a class="btn btn-lg btn-info" href="/appointment/hospital">진료 예약</a>
                 <a class="btn btn-lg btn-info" href="/appointment/list">예약 내역</a>
             </p>
