병원 진료 예약 서비스 toy project bodyHeader.html 에 sec:authorize 속성 이용해서 로그인 여부에 따라 로그인 버튼이 보일지 아니면 로그아웃 버튼이 보이게 할지 설정해줌. 그리고 예약 기능을 이용할 때 기존에는 예약 일자 필드를 우선 LocalDateTime.now() 이용해서 예약한 그 일자를 넣도록 임시로 해놨었는데 이젠 제대로된 일자를 선택할 수 있도록 수정.

--- a/src/main/resources/templates/appointment/appointmentPatientForm.html
+++ b/src/main/resources/templates/appointment/appointmentPatientForm.html
@@ -17,6 +17,9 @@
                 th:text="${patient.name}" />
       </select>
     </div>
+    <div>
+      <input type="date" name="appointment_time">
+    </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
   <br/>
