--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,10 +7,10 @@
         <div th:replace = "fragments/bodyHeader :: bodyHeader"> </div>
         <div class="position-absolute top-50 start-50 translate-middle mt-5">
             <h1>병원 진료 예약 페이지</h1>
-            <p class="lead" align="center">회원 기능</p>
+            <p class="lead" align="center">환자 기능</p>
             <p align="center">
-                <a class="btn btn-lg btn-secondary" href="/patient/new">회원 가입</a>
-                <a class="btn btn-lg btn-secondary" href="/patient/list">회원 목록</a>
+                <a class="btn btn-lg btn-secondary" href="/patient/new">환자 등록</a>
+                <a class="btn btn-lg btn-secondary" href="/patient/list">환자 목록</a>
             </p>
             <p class="lead" align="center">등록 기능</p>
             <p align="center">
