--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <div class="header" th:fragment="bodyHeader">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Offcanvas navbar large">
     <div class="container-fluid">
@@ -21,7 +21,8 @@
               <a class="nav-link" th:href="@{/appointment/hospital}">예약</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" th:href="@{/login}">로그인</a>
+              <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}">로그인</a>
+              <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}">로그아웃</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" th:href="@{/user/join}">회원가입</a>
