--- a/src/main/resources/templates/hospital/hospitalList.html
+++ b/src/main/resources/templates/hospital/hospitalList.html
@@ -10,6 +10,7 @@
         <th>#</th>
         <th>이름</th>
         <th>주소</th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -17,6 +18,12 @@
         <td th:text="${hospital.id}"></td>
         <td><a th:href="@{/hospital/detail(hospital_id = ${hospital.id})}" th:text="${hospital.name}"></a></td>
         <td><span th:text = "${hospital.address.city}"></span><span th:text = "' ' + ${hospital.address.street}"></span><span th:text = "' ' + ${hospital.address.zipcode}"></span></td>
+        <td>
+          <p>
+            <a class="btn btn-lg btn-primary" th:href="@{/hospital/modify(hospital_id = ${hospital.id})}">수정</a>
+            <a class="btn btn-lg btn-danger" th:href="@{/hospital/delete(hospital_id = ${hospital.id})}">삭제</a>
+          </p>
+        </td>
       </tr>
       </tbody>
     </table>
