병원 진료 예약 서비스 toy project 이전 commit 에 이어서 Department, Doctor entity 객체들을 Update 및 Delete 할 수 있는 코드 추가 개발. Doctor entity 관련해서 내용 추가할때는 별 문제 없었으나 Department entity 객체 관련해서 내용 추가할때 문제가 있음을 인지했음. 맨 처음에 Department 클래스 작성할 때 다른 클래스들과는 다르게 PK 값을 String 타입의 name 으로 지정을 했음. 각 병원마다 동일한 이름의 진료과를 가질 수 있다는 점을 간과하고 진료과 이름을 pk로 잡아버려서 서로 다른 병원에 속하되 같은 진료과 이름을 가지는 Department 객체를 만들 수가 없었음. 그래서 Department entity 클래스 내부에서 pk 값을 다시 Long 타입의 id 필드로 잡아줬고 그에 따라 Department 클래스와 관련있는 모든 클래스들에 대규모 수정을 해주었음. 그리고 원래 개발 예정이었던 Department entity 객체에 대한 Update 및 Delete 기능까지 구현완료. 이로써 CRUD 기능을 모두 구현한 HospitalService 애플리케이션이 됐음.

--- a/src/main/resources/templates/appointment/appointmentDepartmentForm.html
+++ b/src/main/resources/templates/appointment/appointmentDepartmentForm.html
@@ -8,10 +8,10 @@
     <div class="form-group">
       <input type="hidden" name= "hospital_id" th:value="${hospitalId}">
       <label for="department">진료과</label>
-      <select name="department_name" id="department" class="form-control">
+      <select name="department_id" id="department" class="form-control">
         <option value="">진료과 선택</option>
         <option th:each="department : ${departments}"
-                th:value="${department.name}"
+                th:value="${department.id}"
                 th:text="${department.name}" />
       </select>
     </div>
