--- a/src/main/resources/templates/appointment/appointmentPatientForm.html
+++ b/src/main/resources/templates/appointment/appointmentPatientForm.html
@@ -7,7 +7,7 @@
   <form role="form" th:action="@{/appointment/patient}" method="post">
     <div class="form-group">
       <input type="hidden" name="hospital_id" th:value="${hospitalId}">
-      <input type="hidden" name="department_name" th:value="${departmentName}">
+      <input type="hidden" name="department_id" th:value="${departmentId}">
       <input type="hidden" name="doctor_id" th:value="${doctorId}">
       <label for="patient">환자</label>
       <select name="patient_id" id="patient" class="form-control">
