--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -20,6 +20,7 @@
             <input type="password" name="password" id="password" class="form-control">
         </div>
         <button type="submit" class="btn btn-primary">로그인</button>
+        <a class="btn btn-success" th:href="@{/user/join}">회원가입</a>
     </form>
 </div>
 </body>
