--- a/src/main/resources/templates/department/departmentModifyForm.html
+++ b/src/main/resources/templates/department/departmentModifyForm.html
@@ -9,22 +9,18 @@
 <body>
   <div th:replace="fragments/bodyHeader :: bodyHeader"/>
   <div class="container">
-    <form role="form" th:action="@{/register/doctor}" th:object="${doctorForm}" method="post">
+    <form role="form" th:action="@{/department/modify(department_id = ${departmentId})}" th:object="${departmentForm}" method="post">
       <div class="form-group">
-        <input type="hidden" name= "hospital_id" th:value="${hospitalId}">
       </div>
       <div class="form-group">
-        <input type="hidden" name= "department_id" th:value="${departmentId}">
-      </div>
-      <div class="form-group">
-        <label th:for="name">의사 이름</label>
-        <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요"
+        <label th:for="name">진료과 이름</label>
+        <input type="text" th:field="*{name}" class="form-control" placeholder="진료과 이름을 입력하세요"
                th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
         <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Incorrect date</p>
       </div>
       <div class="form-group">
-        <label th:for="workYear">연차</label>
-        <input type="number" th:field="*{workYear}" class="form-control" placeholder="연차를 입력하세요">
+        <label th:for="tel">전화번호</label>
+        <input type="text" th:field="*{tel}" class="form-control" placeholder="전화번호를 입력하세요">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
