--- a/src/main/resources/templates/doctor/doctorList.html
+++ b/src/main/resources/templates/doctor/doctorList.html
@@ -11,6 +11,7 @@
       <th>이름</th>
       <th>소속</th>
       <th>연차</th>
+      <th></th>
     </tr>
     </thead>
     <tbody>
@@ -19,6 +20,12 @@
       <td th:text="${doctor.name}"></td>
       <td th:text="${doctor.department.name}"></td>
       <td th:text="${doctor.workYear}"></td>
+      <td>
+        <p>
+          <a class="btn btn-primary" th:href="@{/doctor/modify(doctor_id = ${doctor.id})}">수정</a>
+          <a class="btn btn-danger" th:href="@{/doctor/delete(doctor_id = ${doctor.id})}">삭제</a>
+        </p>
+      </td>
     </tr>
     </tbody>
   </table>
