--- a/src/main/resources/templates/doctor/doctorModifyForm.html
+++ b/src/main/resources/templates/doctor/doctorModifyForm.html
@@ -9,13 +9,7 @@
 <body>
   <div th:replace="fragments/bodyHeader :: bodyHeader"/>
   <div class="container">
-    <form role="form" th:action="@{/register/doctor}" th:object="${doctorForm}" method="post">
-      <div class="form-group">
-        <input type="hidden" name= "hospital_id" th:value="${hospitalId}">
-      </div>
-      <div class="form-group">
-        <input type="hidden" name= "department_id" th:value="${departmentId}">
-      </div>
+    <form role="form" th:action="@{/doctor/modify(doctor_id = ${doctorId})}" th:object="${doctorForm}" method="post">
       <div class="form-group">
         <label th:for="name">의사 이름</label>
         <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요"
