--- a/src/main/resources/templates/patient/patientList.html
+++ b/src/main/resources/templates/patient/patientList.html
@@ -22,8 +22,8 @@
                 <td th:text="${patient.gender}"></td>
                 <td>
                     <p>
-                        <a class="btn btn-lg btn-primary" th:href="@{/patient/modify(patient_id = ${patient.id})}">수정</a>
-                        <a class="btn btn-lg btn-danger" th:href="@{/patient/delete(patient_id = ${patient.id})}">삭제</a>
+                        <a class="btn btn-primary" th:href="@{/patient/modify(patient_id = ${patient.id})}">수정</a>
+                        <a class="btn btn-danger" th:href="@{/patient/delete(patient_id = ${patient.id})}">삭제</a>
                     </p>
                 </td>
             </tr>
